# Chromance-V2

./: CMakeLists.txt  chromance.cpp  chromance.h  colours.cpp  colours.h  debugTools.cpp  debugTools.h  hub.cpp  hub.h  main.cpp  main.h  myNetwork.h  myRandom.cpp  myRandom.h  neopixel.cpp  neopixel.h  profileIncludes.h  profileManager.cpp  profileManager.h  utils.cpp  utils.h
profiles/aurora/: aurora.cpp  aurora.h
profiles/blossom/: blossom.cpp  blossom.h
profiles/clouds/: clouds.cpp  clouds.h
profiles/embers/: embers.cpp  embers.h
profiles/fastRGB/: fastRGB.cpp  fastRGB.h
profiles/fireflies/: fireflies.cpp  fireflies.h
profiles/fireworks/: fireworks.cpp  fireworks.h
profiles/flower/: flower.cpp  flower.h
profiles/heart/: heart.cpp  heart.h
profiles/meteor/: meteor.cpp  meteor.h
profiles/meteorStorm/: meteorStorm.cpp  meteorStorm.h
profiles/pulse/: pulse.cpp  pulse.h
profiles/purpleRain/: purpleRain.cpp  purpleRain.h
profiles/rainbow/: rainbow.cpp  rainbow.h
profiles/rainfall/: rainfall.cpp  rainfall.h
profiles/rgb/: rgb.cpp  rgb.h
profiles/shapeTest/: shapeTest.cpp  shapeTest.h
profiles/snowfall/: snowfall.cpp  snowfall.h
shapes/dot/: dot.cpp  dot.h
shapes/doubleTrail/: doubleTrail.cpp  doubleTrail.h
shapes/segment/: segment.cpp  segment.h
shapes/singleTrail/: singleTrail.cpp  singleTrail.h
shapes/slowTrail/: slowTrail.cpp  slowTrail.h
shapes/trail/: trail.cpp  trail.h
